Bug 441298 - Detach/attach Brush Editor causes window glitches on macOS
Summary: Detach/attach Brush Editor causes window glitches on macOS
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-21 13:56 UTC by apelsinchoklad
Modified: 2021-08-25 18:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Brush Editor window bug (1.75 MB, video/mp4)
2021-08-21 13:56 UTC, apelsinchoklad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description apelsinchoklad 2021-08-21 13:56:48 UTC
Created attachment 140914 [details]
Brush Editor window bug

SUMMARY
When selecting the option to detach the Brush Editor the window drop shadow gets stuck on screen. When re-attached, a blank window is left that cannot be closed.

Not persistent after Krita restart.

SOFTWARE/OS VERSIONS
macOS: 10.13.6

ADDITIONAL INFORMATION
Video demo attached
Comment 1 vanyossi 2021-08-21 20:28:01 UTC
I cannot reproduce this issue on krita 5 beta on macos 11.5.2, and for the moment I cannot test this on High Sierra (10.13.6) which could be the potential issue.

Is it possible for you to test on a more recent macOS?
Comment 2 apelsinchoklad 2021-08-22 07:36:13 UTC
(In reply to vanyossi from comment #1)
> I cannot reproduce this issue on krita 5 beta on macos 11.5.2, and for the
> moment I cannot test this on High Sierra (10.13.6) which could be the
> potential issue.
> 
> Is it possible for you to test on a more recent macOS?

I'd need a newer graphics card to upgrade this computer. And its about time :D I'll ask my sister. (I believe she run Mojave on her laptop but not sure.)

I was able to reproduce the bug on another machine also running High Sierra however.
Comment 3 apelsinchoklad 2021-08-22 16:24:14 UTC
(In reply to vanyossi from comment #1)

On my sisters computer running macOS Mojave 10.14.6 the blank window is created but not the stuck drop shadow.
Comment 4 Bug Janitor Service 2021-08-23 04:36:35 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 5 Halla Rempt 2021-08-23 10:41:22 UTC
On Mojava, I can reproduce: I set the brush editor to attached -- an empty window shows up where the editor dialog was, and that only goes away when I popup the editor again in its attached state. I don't have to restart Krita for that.

I suspect that it's a bug in Qt, though.
Comment 6 vanyossi 2021-08-25 17:25:08 UTC
I can reproduce this on BigSur as well now. to make sure a left behind window is created do the steps, however since last compile am always getting a dummy window everytime I toggle the checkbox (as many windows as times toggled)

1. Select Detach Brush editor
2. Go Full screen
3. Activate brush editor, this will make focus move to the previous desktop to show the editor
4. Without leavinf FS: "Detach Brush editor"
5. A dummy/ghost empty window is left behind

It seems as we are loosing the parent reference and not killing the window, need to check the code for that.
Comment 7 vanyossi 2021-08-25 18:52:09 UTC
Git commit 2ce5348f1c6b0a94c39da87881609033ced1cea2 by Ivan Yossi.
Committed on 25/08/2021 at 18:51.
Pushed by ivany into branch 'master'.

Fix left behind brush preset window on macOS

M  +1    -1    libs/widgetutils/KisPopupButton.cpp

https://invent.kde.org/graphics/krita/commit/2ce5348f1c6b0a94c39da87881609033ced1cea2
Comment 8 vanyossi 2021-08-25 18:55:12 UTC
Git commit 5686325adb8cff44d62c2ae0b2f87e3e96e093ed by Ivan Yossi.
Committed on 25/08/2021 at 18:54.
Pushed by ivany into branch 'krita/5.0'.

Fix left behind brush preset window on macOS

M  +1    -1    libs/widgetutils/KisPopupButton.cpp

https://invent.kde.org/graphics/krita/commit/5686325adb8cff44d62c2ae0b2f87e3e96e093ed