Fix left behind brush preset window on macOS

BUG: 441298